add marks on the map

--- a/Index.html
+++ b/Index.html
@@ -5,13 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
+    integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14="
+    crossorigin=""/>
+     
+    <title>Eric Json Test</title>
 </head>
 <body>
     <h2 id="text1">
         the number should be here!
     </h2>
-    
+
+    <div>
+        <!--map is here-->
+        <div id="map"></div>
+    </div>
+    <!-- Make sure you put this AFTER Leaflet's CSS -->
+    <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
+    integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg="
+    crossorigin=""></script>
     <script type="text/javascript" src="./road-ahead-current-road-closures.json"></script>
     <script type="text/javascript" src="main.js"></script>
 </body>
