try to add search

--- a/Index.html
+++ b/Index.html
@@ -12,10 +12,14 @@
     <title>Eric Json Test</title>
 </head>
 <body>
-    <h2 id="text1">
-        the number should be here!
-    </h2>
+    <p id="pageID" hidden>Main</p>
+    <div>
 
+    </div>
+        <form action="">
+            <input type="search" placeholder="Search..." id="inputStr" onsearch = "searchFunction()">
+            <!--<input type="submit" onclick="searchFunction()" id="btnSubmit">-->
+        </form>
     <div>
         <!--map is here-->
         <div id="map"></div>
