--- a/searchResult.html
+++ b/searchResult.html
@@ -14,6 +14,6 @@
     <div>
         <h3 id="statment">test</h3>
     </div>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="main2.js"></script>
 </body>
 </html>
