have search feature now

--- a/searchResult.html
+++ b/searchResult.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>Search Result</title>
 </head>
 <body>
@@ -11,9 +12,7 @@
     <div>
         <img id="roadSta" src="" alt="road status">
     </div>
-    <div>
-        <h3 id="statment">test</h3>
-    </div>
+    <div id="statment"></div>
     <script type="text/javascript" src="search.js"></script>
 </body>
 </html>
