--- a/Index.html
+++ b/Index.html
@@ -12,14 +12,10 @@
     <title>Eric Json Test</title>
 </head>
 <body>
-    <p id="pageID" hidden>Main</p>
-    <div>
-
-    </div>
-        <form action="">
-            <input type="search" placeholder="Search..." id="inputStr" onsearch = "searchFunction()">
-            <!--<input type="submit" onclick="searchFunction()" id="btnSubmit">-->
-        </form>
+    <form action="" id="searchBar">
+        <input type="search" placeholder="Search..." id="inputStr" onsearch = "searchFunction()">
+        <!--<input type="submit" onclick="searchFunction()" id="btnSubmit">-->
+    </form>
     <div>
         <!--map is here-->
         <div id="map"></div>
