--- a/searchResult.html
+++ b/searchResult.html
@@ -8,7 +8,7 @@
     <title>Search Result</title>
 </head>
 <body>
-    <div hidden id="pageID">Sub</div>
+    <!--<div hidden id="pageID">Sub</div> //one way to try to different the index.html-->
     <div>
         <img id="roadSta" src="" alt="road status">
     </div>
