add go back to main

--- a/searchResult.html
+++ b/searchResult.html
@@ -13,6 +13,10 @@
         <img id="roadSta" src="" alt="road status">
     </div>
     <div id="statment"></div>
-    <script type="text/javascript" src="search.js"></script>
+
+    <div>
+        <input type="button" id="point" value="Show on Map" onclick="pointMap()" >
+    </div>
+    <script type="text/javascript" src="search.js"></script>    
 </body>
 </html>
