has little test of variable

--- a/Index.html
+++ b/Index.html
@@ -26,5 +26,6 @@
     crossorigin=""></script>
     <script type="text/javascript" src="./road-ahead-current-road-closures.json"></script>
     <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="variableTest.js"></script>
 </body>
 </html>
